// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileField should display loading when loading 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <div
      className="d-flex align-center"
    >
      <div
        className="preview"
      >
        <img
          src="value"
        />
      </div>
      <Button
        className="label"
        color="secondary"
        disabled={true}
        tag="label"
      >
        <div>
          <i
            className="fa fa-fw fa-circle-o-notch fa-spin mr-2"
          />
          Uploading...
        </div>
        <Input
          disabled={true}
          hidden={true}
          id="id-input-5"
          onChange={[Function]}
          type="file"
        />
      </Button>
    </div>
  </div>
</FormGroup>
`;

exports[`FileField should not render preview 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <div
      className="d-flex align-center"
    >
      <Button
        className="label"
        color="secondary"
        disabled={false}
        tag="label"
      >
        <div>
          Select a file...
        </div>
        <Input
          disabled={false}
          hidden={true}
          id="id-input-4"
          onChange={[Function]}
          previewUrl="url"
          type="file"
        />
      </Button>
    </div>
  </div>
</FormGroup>
`;

exports[`FileField should render a basic file input 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <div
      className="d-flex align-center"
    >
      <div
        className="preview"
      >
        <img
          src="value"
        />
      </div>
      <Button
        className="label"
        color="secondary"
        disabled={false}
        tag="label"
      >
        <div>
          Select a file...
        </div>
        <Input
          disabled={false}
          hidden={true}
          id="id-input-2"
          onChange={[Function]}
          type="file"
        />
      </Button>
    </div>
  </div>
</FormGroup>
`;

exports[`FileField should render preview 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <div
      className="d-flex align-center"
    >
      <div
        className="preview"
      >
        <img
          src="value"
        />
      </div>
      <Button
        className="label"
        color="secondary"
        disabled={false}
        tag="label"
      >
        <div>
          Select a file...
        </div>
        <Input
          disabled={false}
          hidden={true}
          id="id-input-3"
          onChange={[Function]}
          previewUrl="url"
          type="file"
        />
      </Button>
    </div>
  </div>
</FormGroup>
`;

exports[`FileField should use default props 1`] = `
Object {
  "noPreview": false,
  "onChange": [Function],
  "placeholder": "Select a file...",
  "returnFiles": false,
  "type": "file",
  "value": "value",
}
`;
